@@ -1,3 +1,8 @@
+2003-12-09  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 04021] Deeply nested table
+	* file.c (completeHTMLstream): check obuf->table_level
+
 2003-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* Bug#217509: segfaults if TERM is not set
@@ -8261,4 +8266,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.891 2003/12/08 16:06:33 ukai Exp $
+$Id: ChangeLog,v 1.892 2003/12/08 16:08:01 ukai Exp $
